	* R410: Updated bksys files to new scons version 0.96.91
	* R411: Scons: Replaced kde.py by kde3.py. Added a missing function for KDEprogram
	* R413: unix scons files
	* R414: osx scons files
	* R415: win32 scons files
	* R416: Scons: Added check for existing cache files
	* R417: Updated scons minimum environment to 0.96.91
	* R418: lowlevel scons file
	* R423: Changed toolpath to scons_admin, bksys link no longer needed
	* R421: Updated SConstruct file to new scons version
	* R420: Simplified sconscript with new scons version
	* R424: Added translation sconscript required by new scons/bksys version
	* R426: Added printing icon ("fileprint") and preview icon ("frameprint")
	* R434: FIXED: compilation warnings for lo48 and lo64 icons
	* R435: Updated NEWS. Updated Slovenian and other translations.
	* R439: Enable print support by default in configure
	* R441: In lilypond export korrect syntax for alternatives in repeats
	* R444: ADDED: Portuguese translation thanks to Denis A. Altoe Falqueto.
	* R445: FIXED: Removed obsolete nscaleedit.h inclusion from a couple of .ui files, which caused problems during compilation on some systems.
	* R446: Updated Slovenian and Italian translation.
	* R447: Updated Documentation (Authors, Copyright, Dependencies)
	* R448: Updated German translation.
	* R450: Bugfix Preview Print: Don't delete preview files too early
	* R451: FIXED: Lilypond instrument name is now exported in UTF8 encoding
	* R452: FIXED: Author -> Composer, Last author -> Arranger, updated translations
	* R453: Updated Spanish translation (part I)
	* R454: FIXED: Removed HTML lyrics parsing. QTextEdit completely messed up NoteEdit's < and > keywords for syllabic singing. 
	* R455: FIXED: Duplicate env string in lilytest.cpp, so the path won't get truncated
	* R456: ADDED: kpdf as preview program